fix this broken float rule that has plagued builds for too long

--- a/custom-post-types/resources/style.css
+++ b/custom-post-types/resources/style.css
@@ -31,7 +31,7 @@
 	float: right;
 }
 input[type="checkbox"] {
-	float: right;
+	/*float: right;*/
 }
 input[type=checkbox]#dropdown, input[type=checkbox]#dropdown2 {
 	position: absolute;
